--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,15 @@
-*.vcxproj
-Cusy/Cusy.v12.suo
 *.sdf
-Cusy/Cusy.vcxproj
-*.ilk
-*.tlog
-*.vcxproj
-*.d
-*.mk
 *.suo
-*.vcxproj
-*.filters
-*.sdf
 *.obj
-*.pdb
 *.log
-*.tlog
-*.ilk
 *.exe
+*.tlog
+*.lastbuildstate
+*.ilk
+*.vcxproj
+*.idb
+*.pdb
 *.o
-*.d
+*.mk
+*.vcxproj
 *.d
