--- a/Cusy/Cusy.vcxproj
+++ b/Cusy/Cusy.vcxproj
@@ -70,6 +70,7 @@
     <ClCompile Include="..\source\game.c" />
     <ClCompile Include="..\source\main.c" />
     <ClCompile Include="..\source\mappa.c" />
+    <ClCompile Include="..\source\maze.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\azioni.h" />
