--- a/Cusy/Cusy.vcxproj
+++ b/Cusy/Cusy.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{4BA3E839-25BC-45C5-95B8-DE8564A3D74C}</ProjectGuid>
+    <ProjectGuid>{A2236C50-23D0-47C1-A498-3B4313BB1AFA}</ProjectGuid>
     <RootNamespace>Cusy</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -57,7 +57,6 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -70,12 +69,14 @@
     <ClCompile Include="..\source\game.c" />
     <ClCompile Include="..\source\main.c" />
     <ClCompile Include="..\source\mappa.c" />
+    <ClCompile Include="..\source\system.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\azioni.h" />
     <ClInclude Include="..\source\game.h" />
     <ClInclude Include="..\source\mappa.h" />
     <ClInclude Include="..\source\system.h" />
+    <ClInclude Include="..\source\type.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
