--- a/Cusy/Cusy.vcxproj.filters
+++ b/Cusy/Cusy.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClCompile Include="..\source\mappa.c">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\game.c">
+    <ClCompile Include="..\source\system.c">
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="..\source\azioni.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\game.c">
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="..\source\main.c">
@@ -29,9 +32,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\source\system.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
     <ClInclude Include="..\source\azioni.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
@@ -39,6 +39,12 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="..\source\mappa.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\system.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\type.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
