--- a/Cusy/Cusy.vcxproj.filters
+++ b/Cusy/Cusy.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\source\main.c">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\maze.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\source\system.h">
